=== ongoing ===

=== 0.1.1 ===
 
 - Fixed wrong template folder name

=== 0.1 ===

Initial commit