@@ -1,0 +1,11 @@
+#!/usr/bin/env python
+import os
+import sys
+
+if __name__ == "__main__":
+    os.environ.setdefault(
+        'DJANGO_SETTINGS_MODULE', 'subscribe.tests.south_settings')
+
+    from django.core.management import execute_from_command_line
+
+    execute_from_command_line(sys.argv)
